chore: state before lint:fix
Co-authored-by: Cursor <cursoragent@cursor.com>